# 15101051

./: .gitignore  .gitmodules  CMakeLists.txt  Octree.hpp  PointSet.cpp  README.md  main.cpp
assets/: beard.ply  bunny_30.ply  cloud_oriented.ply  gaussian.ply  gaussian2ddown.ply  gaussian2dleft.ply  gaussian2dright.ply  gaussian2dup.ply  gaussian_spike_norm.ply  heart2d.ply
doc/: Doxyfile.in  main.md
src/: AlgebraicSphere.hpp  AlgebraicSphere.t.hpp  Define.hpp  ImguiDebug.hpp  ImguiDebug.t.hpp  Octree.cpp  Octree.hpp  Octree.t.hpp  PointSet.cpp  PointSet.hpp  PointSet.t.hpp  Sphere.cpp  Sphere.hpp  blending.cpp  blending.hpp  blending.t.hpp  debug.cpp  debug.hpp  debug.t.hpp  kernels.hpp  kernels.t.hpp  main.cpp  main.hpp  utils.cpp  utils.hpp  utils.t.hpp
src/Debug/: ImguiFileSelection.hpp  ImguiFileSelection.t.hpp  ImguiFittingDebug.hpp  ImguiFittingDebug.t.hpp  ImguiInputOctreeDebug.hpp  ImguiInputOctreeDebug.t.hpp
src/Gui/: FileSelectionGui.hpp  FileSelectionGui.t.hpp  FittingGui.hpp  FittingGui.t.hpp  OctreeGui.hpp  OctreeGui.t.hpp
src/Octree/: BaseOctree.hpp  BaseOctree.t.hpp  InputOctree.hpp  InputOctree.t.hpp  Octree.hpp  Octree.t.hpp
